Fix article font size and spacing for better reading.

--- a/source/stylesheets/_header.scss
+++ b/source/stylesheets/_header.scss
@@ -13,6 +13,10 @@
     height: 75px;
 }
 
+.nav {
+    font-weight: 400;
+}
+
 @media(max-width: 991px) {
 
     .navbar-nav .unruly-logo {
