--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -1,3 +1,5 @@
+@import "font";
+@import "animations";
 @import "header";
 @import "footer";
 @import "jumbotron";
@@ -7,6 +9,12 @@
 body {
 	min-width:320px;
     font-size: 16px;
+    font-family: 'Open Sans', 'Helvetica', 'Arial', 'sans-serif';
+    font-weight: 400;
+}
+
+.btn {
+    font-weight: 400;
 }
 
 .contributor {
@@ -54,21 +62,6 @@ body {
     }
 }
 
-#postsContainer::after {
-    display: block;
-    background-position: center -13px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    width: 200px;
-    height: 200px;
-    content: " ";
-    position: absolute;
-    right: -210px;
-    bottom: 500px;
-    background-image: url("../images/bots/bot-happy-right.png");
-    border-left: 1px solid #eeeeee;
-}
-
 .post {
     margin-bottom: 50px;
     border-bottom: 1px solid #eeeeee;
@@ -101,16 +94,24 @@ body {
 
 .post-content {
     margin: 10px 0 20px;
+    font-size: 18px;
+    line-height: 1.5em;
 
     pre {
         background: none;
         border: none;
         padding: 0;
         font-size: 14px;
+        font-family: "Source Code Pro", monospace;
 
         code {
             white-space: pre-line;
+            font-family: inherit;
         }
+    }
+
+    h2 {
+        margin: 30px 0 20px;
     }
 }
 
@@ -135,11 +136,6 @@ body {
     font-size:50px;
     padding: 50px;
     color:#dddddd;
-}
-
-.article-text {
-    font-size: 18px;
-    line-height: 1.5em;
 }
 
 .panel-image {
